--- a/KGERP/Views/BillRequisition/MDBRApprovalList.cshtml
+++ b/KGERP/Views/BillRequisition/MDBRApprovalList.cshtml
@@ -80,7 +80,7 @@
                         <hr />
 
                         <div class="table-responsive">
-                            <table id="KgErpDataTable" class="table table-striped text-center table-responsive">
+                            <table id="KgErpDataTable" class="table table-striped table-responsive">
                                 <thead>
                                     <tr>
                                         <th>SL</th>
